# tr-and-slate-or

./: .gitmodules  CMakeLists.txt  README.md  resharper_formatting_settings.DotSettings  tr-and-slate-or.sln  translations_parser.py  vcpkg.json
include/: FileManager.h  TranslationManager.h
src/: FileManager.cpp  TranslationManager.cpp
tr-and-slate-or/: configs.ini  tr-and-slate-or.vcxproj  tr-and-slate-or.vcxproj.filters
tr-and-slate-or/src/: CFileManager.cpp  CFileManager.h  CTranslationManager.cpp  CTranslationManager.h  FileManager.cpp  FileManager.h  TranslationManager.cpp  TranslationManager.h  main.cpp
tr-and-slate-or/translations/: fr.json
translations/: configs.ini  fr.json  is.json
